# solid_cpp

./: .clang-uml  CMakeLists.txt  readme.md
scripts/: create_uml.sh
src/: driving_system.cpp
